--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Mail Box with React" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>CubeMail</title>
     <script src="https://apis.google.com/js/api.js"></script>
     <!-- <script src="https://apis.google.com/js/client.js" async defer></script> -->
   </head>
